:sparkles: fix layout issue

--- a/packages/blocks-library/src/input-base/style.scss
+++ b/packages/blocks-library/src/input-base/style.scss
@@ -2,17 +2,11 @@
 
 .wp-block-cf7-blocks-input-base {
 
-	label {
-		display: flex;
-		flex-direction: column;
-	}
-
 	input,
 	textarea {
 		width: 100%;
 		padding: 5px;
 		min-height: 30px;
 	}
-
 
 }
